# nn

./: .gitignore  Cargo.toml  README.md  build.rs
gui/: .ycm_extra_conf.py  CMakeLists.txt
gui/src/: MainWindow.cc  MainWindow.h  NeuralNetworkInputWidget.cc  NeuralNetworkInputWidget.h  NeuralNetworkState.cc  NeuralNetworkState.h  ffi.h  main.cc  test.cc
src/: index.html  main.rs
